--- a/brexit-data.ipynb
+++ b/brexit-data.ipynb
@@ -55,7 +55,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(\".\\\\data\" + \"\\\\\" + filename[0], sheet_name= \"Country by Commodity Import\")"
+    "#df = pd.read_excel(\".\\\\data\" + \"\\\\\" + filename[0], sheet_name= \"Country by Commodity Import\")\n",
+    "\n",
+    "df = pd.read_excel(\".\\\\data\" + \"\\\\\" + filename[0], sheet_name= \"3. Monthly Imports\", header=3, na_values = \"X\")"
    ]
   },
   {
@@ -95,16 +97,16 @@
        "      <th>2018JUN</th>\n",
        "      <th>2018JUL</th>\n",
        "      <th>...</th>\n",
-       "      <th>2021FEB</th>\n",
-       "      <th>2021MAR</th>\n",
-       "      <th>2021APR</th>\n",
-       "      <th>2021MAY</th>\n",
-       "      <th>2021JUN</th>\n",
        "      <th>2021JUL</th>\n",
        "      <th>2021AUG</th>\n",
        "      <th>2021SEP</th>\n",
        "      <th>2021OCT</th>\n",
        "      <th>2021NOV</th>\n",
+       "      <th>2021DEC</th>\n",
+       "      <th>2022JAN</th>\n",
+       "      <th>2022FEB</th>\n",
+       "      <th>2022MAR</th>\n",
+       "      <th>2022APR</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -122,9 +124,9 @@
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.07</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.07</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
@@ -145,16 +147,16 @@
        "      <td>0.93</td>\n",
        "      <td>0.79</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.21</td>\n",
-       "      <td>5.34</td>\n",
        "      <td>1.53</td>\n",
-       "      <td>1.17</td>\n",
-       "      <td>1.32</td>\n",
-       "      <td>1.52</td>\n",
        "      <td>1.76</td>\n",
-       "      <td>1.34</td>\n",
-       "      <td>1.03</td>\n",
+       "      <td>1.33</td>\n",
+       "      <td>1.04</td>\n",
        "      <td>1.38</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>3.18</td>\n",
+       "      <td>3.57</td>\n",
+       "      <td>4.32</td>\n",
+       "      <td>4.82</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -169,16 +171,16 @@
        "      <td>0.12</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.03</td>\n",
        "      <td>0.01</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.09</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -195,14 +197,14 @@
        "      <td>...</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.02</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.05</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -217,12 +219,12 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.03</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
@@ -230,7 +232,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 50 columns</p>\n",
+       "<p>5 rows × 55 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -241,28 +243,28 @@
        "3  0 Food & live animals   AG Antigua and Barbuda  IM Imports     0.00   \n",
        "4  0 Food & live animals              AI Anguilla  IM Imports     0.00   \n",
        "\n",
-       "   2018FEB  2018MAR  2018APR  2018MAY  2018JUN  2018JUL  ...  2021FEB  \\\n",
+       "   2018FEB  2018MAR  2018APR  2018MAY  2018JUN  2018JUL  ...  2021JUL  \\\n",
        "0     0.00     0.00     0.00     0.00     0.00     0.00  ...     0.00   \n",
-       "1     0.71     8.59     1.43     0.85     0.93     0.79  ...     1.21   \n",
-       "2     0.00     0.00     0.00     0.02     0.12     0.00  ...     0.24   \n",
+       "1     0.71     8.59     1.43     0.85     0.93     0.79  ...     1.53   \n",
+       "2     0.00     0.00     0.00     0.02     0.12     0.00  ...     0.03   \n",
        "3     0.00     0.00     0.00     0.00     0.00     0.00  ...     0.00   \n",
-       "4     0.00     0.00     0.00     0.00     0.00     0.00  ...     0.00   \n",
+       "4     0.00     0.00     0.00     0.00     0.00     0.00  ...     0.03   \n",
        "\n",
-       "   2021MAR  2021APR  2021MAY  2021JUN  2021JUL  2021AUG  2021SEP  2021OCT  \\\n",
-       "0     0.07     0.00     0.07     0.00     0.00     0.00     0.00     0.00   \n",
-       "1     5.34     1.53     1.17     1.32     1.52     1.76     1.34     1.03   \n",
-       "2     0.10     0.12     0.02     0.00     0.03     0.01     0.00     0.00   \n",
-       "3     0.00     0.02     0.00     0.04     0.00     0.00     0.05     0.00   \n",
-       "4     0.00     0.00     0.00     0.00     0.03     0.00     0.00     0.00   \n",
+       "   2021AUG  2021SEP  2021OCT  2021NOV  2021DEC  2022JAN  2022FEB  2022MAR  \\\n",
+       "0     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
+       "1     1.76     1.33     1.04     1.38     1.75     3.18     3.57     4.32   \n",
+       "2     0.01     0.00     0.00     0.10     0.15     0.13     0.01     0.16   \n",
+       "3     0.00     0.05     0.00     0.00     0.00     0.00     0.00     0.00   \n",
+       "4     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
        "\n",
-       "   2021NOV  \n",
+       "   2022APR  \n",
        "0     0.00  \n",
-       "1     1.38  \n",
-       "2     0.09  \n",
-       "3     0.00  \n",
+       "1     4.82  \n",
+       "2     0.11  \n",
+       "3     0.02  \n",
        "4     0.00  \n",
        "\n",
-       "[5 rows x 50 columns]"
+       "[5 rows x 55 columns]"
       ]
      },
      "execution_count": 5,
@@ -485,43 +487,43 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>136201</th>\n",
+       "      <th>150691</th>\n",
        "      <td>Whole world</td>\n",
        "      <td>Total (ex. metals)</td>\n",
-       "      <td>2021-07-01</td>\n",
-       "      <td>3.907300e+10</td>\n",
+       "      <td>2021-12-01</td>\n",
+       "      <td>4.385500e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>136202</th>\n",
+       "      <th>150692</th>\n",
        "      <td>Whole world</td>\n",
        "      <td>Total (ex. metals)</td>\n",
-       "      <td>2021-08-01</td>\n",
-       "      <td>3.616700e+10</td>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>4.808300e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>136203</th>\n",
+       "      <th>150693</th>\n",
        "      <td>Whole world</td>\n",
        "      <td>Total (ex. metals)</td>\n",
-       "      <td>2021-09-01</td>\n",
-       "      <td>4.276100e+10</td>\n",
+       "      <td>2022-02-01</td>\n",
+       "      <td>4.626800e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>136204</th>\n",
+       "      <th>150694</th>\n",
        "      <td>Whole world</td>\n",
        "      <td>Total (ex. metals)</td>\n",
-       "      <td>2021-10-01</td>\n",
-       "      <td>4.220100e+10</td>\n",
+       "      <td>2022-03-01</td>\n",
+       "      <td>5.742800e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>136205</th>\n",
+       "      <th>150695</th>\n",
        "      <td>Whole world</td>\n",
        "      <td>Total (ex. metals)</td>\n",
-       "      <td>2021-11-01</td>\n",
-       "      <td>4.517900e+10</td>\n",
+       "      <td>2022-04-01</td>\n",
+       "      <td>5.009400e+10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>136206 rows × 4 columns</p>\n",
+       "<p>150696 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -532,13 +534,13 @@
        "3           Belgium     02 Dairy products & eggs 2018-01-01  1.761000e+07\n",
        "4           Belgium          03 Fish & shellfish 2018-01-01  1.200000e+06\n",
        "...             ...                          ...        ...           ...\n",
-       "136201  Whole world           Total (ex. metals) 2021-07-01  3.907300e+10\n",
-       "136202  Whole world           Total (ex. metals) 2021-08-01  3.616700e+10\n",
-       "136203  Whole world           Total (ex. metals) 2021-09-01  4.276100e+10\n",
-       "136204  Whole world           Total (ex. metals) 2021-10-01  4.220100e+10\n",
-       "136205  Whole world           Total (ex. metals) 2021-11-01  4.517900e+10\n",
+       "150691  Whole world           Total (ex. metals) 2021-12-01  4.385500e+10\n",
+       "150692  Whole world           Total (ex. metals) 2022-01-01  4.808300e+10\n",
+       "150693  Whole world           Total (ex. metals) 2022-02-01  4.626800e+10\n",
+       "150694  Whole world           Total (ex. metals) 2022-03-01  5.742800e+10\n",
+       "150695  Whole world           Total (ex. metals) 2022-04-01  5.009400e+10\n",
        "\n",
-       "[136206 rows x 4 columns]"
+       "[150696 rows x 4 columns]"
       ]
      },
      "execution_count": 16,
@@ -671,7 +673,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>866502 rows × 4 columns</p>\n",
+       "<p>880992 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -688,7 +690,7 @@
        "730294  Whole world           Total (ex. metals) 2017-11-01  4.213700e+10\n",
        "730295  Whole world           Total (ex. metals) 2017-12-01  3.663500e+10\n",
        "\n",
-       "[866502 rows x 4 columns]"
+       "[880992 rows x 4 columns]"
       ]
      },
      "execution_count": 18,
@@ -750,24 +752,24 @@
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">Whole world</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">Total (ex. metals)</th>\n",
-       "      <th>2021-07-01</th>\n",
-       "      <td>3.907300e+10</td>\n",
+       "      <th>2021-12-01</th>\n",
+       "      <td>4.385500e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-08-01</th>\n",
-       "      <td>3.616700e+10</td>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>4.808300e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-09-01</th>\n",
-       "      <td>4.276100e+10</td>\n",
+       "      <th>2022-02-01</th>\n",
+       "      <td>4.626800e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-10-01</th>\n",
-       "      <td>4.220100e+10</td>\n",
+       "      <th>2022-03-01</th>\n",
+       "      <td>5.742800e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2021-11-01</th>\n",
-       "      <td>4.517900e+10</td>\n",
+       "      <th>2022-04-01</th>\n",
+       "      <td>5.009400e+10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -776,11 +778,11 @@
       "text/plain": [
        "                                                imports\n",
        "COUNTRY     COMMODITY          time                    \n",
-       "Whole world Total (ex. metals) 2021-07-01  3.907300e+10\n",
-       "                               2021-08-01  3.616700e+10\n",
-       "                               2021-09-01  4.276100e+10\n",
-       "                               2021-10-01  4.220100e+10\n",
-       "                               2021-11-01  4.517900e+10"
+       "Whole world Total (ex. metals) 2021-12-01  4.385500e+10\n",
+       "                               2022-01-01  4.808300e+10\n",
+       "                               2022-02-01  4.626800e+10\n",
+       "                               2022-03-01  5.742800e+10\n",
+       "                               2022-04-01  5.009400e+10"
       ]
      },
      "execution_count": 20,
